<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity"
    >

    <include layout="@layout/header" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/welcome"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <EditText
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:text="@string/group"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <EditText
            android:hint="@string/group"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/filliere"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/fillire_spinner"
            android:entries="@array/filliere_array"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <RadioButton
                android:text="@string/technicien"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:text="@string/technicien_specialise"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/add" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>